# grumpy

./: .gitignore  Cargo.toml  LICENSE  README-python.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
grumpy/: Cargo.toml  test.py
grumpy/src/: common.rs  difference.rs  gene.rs  genome.rs  main.rs  vcf.rs
reference/: MN908947.3.gb
src/: common.rs  difference.rs  gene.rs  genome.rs  lib.rs  main.rs  vcf.rs
test/: TEST-DNA-4-minor.vcf  TEST-DNA-4.vcf  TEST-DNA-misc-indel.vcf  complex.vcf  dummy.vcf  minor-populations-revcomp-AD.vcf  revcomp-del-first-pos.vcf  tb-snp-after-del.vcf
