[package]
name = "grumpy"
version = "0.2.5"
edition = "2021"
description = "Genetic analysis in Rust."
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb-io = "0.7.1"
ordered-float = "4.2.1"
string_cache = "0.8.7"
vcf = "0.6.1"
pyo3 = { version = "0.22.1", features = ["extension-module"] }
pretty_assertions = "1.4.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 3
debug = 1
lto = true

[profile.release]
opt-level = 3
debug-assertions = true # Required else lto gives no optimisations???
lto = true

[lib]
name = "grumpy"
crate-type = ["cdylib", "rlib"]

[lints.rust]
# Used for ignoring boilerplate parts of py03 bindings + main function
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
