[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
# 'grumpy' is taken on PyPi, but we can still use `import grumpy` after a `pip install bio-grumpy`
name = "bio-grumpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
