[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
# 'grumpy' is taken on PyPi, but we can still use `import grumpy` after a `pip install bio-grumpy`
name = "bio-grumpy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "`gumpy` re-implementation in Rust"
readme = "README-python.md"
license-file = "LICENSE"
dynamic = ["version"]
authors = [
    { name = "Jeremy Westhead", email = "jeremy.westhead@ndm.ox.ac.uk" }
]

[project.urls]
Source = "https://github.com/oxfordmmm/grumpy"

[tool.maturin]
features = ["pyo3/extension-module"]
